# eip712-discrepancy

./: README.md
src/eip_712_js/: index.js  package.json
src/eip_712_py/: main.py  pyproject.toml
